# Serialize_git

./: db.sqlite3  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
book_store/: Models.py  serialize.py  settings.py
core/: settings.py  urls.py
store/: models.py  tests.py
store/migrations/: 0001_initial.py
